@@ -87,7 +87,7 @@ order.  By default, the first sort criteria is selected.
     >>> print browser.contents
     <...
     ...Sort on:...
-    ...Relevance...
+    ...Relevance</span>...
     ...Effective Date...
     >>> browser.getLink('Relevance')
     Traceback (most recent call last):
@@ -110,7 +110,7 @@ results will be sorted according to the sort criteria.
     <...
     ...Sort on:...
     ...Relevance...
-    ...Effective Date...
+    ...Effective Date</span>...
     >>> browser.getLink('Effective Date')
     Traceback (most recent call last):
     LinkNotFoundError
